--- a/app/src/main/res/layout/activity_menu_grid.xml
+++ b/app/src/main/res/layout/activity_menu_grid.xml
@@ -115,6 +115,11 @@
 
     </RelativeLayout>
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_gravity="right|bottom" />
 
 
 </FrameLayout>
