--- a/app/src/main/res/layout/activity_menu_grid.xml
+++ b/app/src/main/res/layout/activity_menu_grid.xml
@@ -111,6 +111,73 @@
 
             </RelativeLayout>
 
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/invoice" >
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:stretchColumns="3"
+                    android:id="@+id/invoice_table"
+                    android:layout_gravity="left|center_vertical">
+
+                    <TableRow android:id="@+id/main_row"
+                        style="@style/invoice_row">
+
+                        <TextView
+                            android:text="#"
+                            android:id="@+id/textView5"
+                            style="@style/invoice_col_1" />
+
+                        <TextView
+                            android:text="NAME"
+                            android:id="@+id/textView2"
+                            style="@style/invloice_col_2" />
+
+                        <TextView
+                            android:text="Q"
+                            android:id="@+id/textView3"
+                            style="@style/invoice_col_3" />
+
+                        <TextView
+                            android:text="PRICE"
+                            android:id="@+id/textView4"
+                            style="@style/invoice_col_4" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </ScrollView>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Total"
+                    android:id="@+id/textView6"
+                    android:gravity="center_vertical|center_horizontal|right"
+                    android:layout_weight="1"
+                    android:textSize="28dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="125$"
+                    android:id="@+id/invoice_total"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right|center_horizontal"
+                    android:textSize="28dp" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </RelativeLayout>
