--- a/app/src/main/res/layout/activity_main_settings_login.xml
+++ b/app/src/main/res/layout/activity_main_settings_login.xml
@@ -42,7 +42,8 @@
             android:layout_below="@+id/usernamelabel"
             android:layout_centerHorizontal="true"
             android:hint="Enter Your Username"
-            android:gravity="center_vertical|center_horizontal" />
+            android:gravity="center_vertical|center_horizontal"
+            android:text="admin" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,7 +65,8 @@
             android:layout_below="@+id/textView9"
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical|center_horizontal"
-            android:hint="Enter Your Password" />
+            android:hint="Enter Your Password"
+            android:text="123456" />
 
         <Button
             android:layout_width="250dp"
