--- a/app/src/main/res/layout/activity_main_settings.xml
+++ b/app/src/main/res/layout/activity_main_settings.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.codomotive.haminibarlogin.MainSettings"
-    android:background="@color/material_deep_teal_200">
+    android:background="@color/dim_foreground_material_dark">
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,24 +21,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Choose on which refregerator this app is running"
+        android:text="Select Refrigerator"
         android:id="@+id/textView10"
-        android:layout_below="@+id/textView8"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
         android:gravity="center_vertical|center_horizontal"
-        android:textSize="22dp" />
+        android:textSize="22dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Spinner
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/ref_spinner"
-        android:layout_marginTop="42dp"
         android:dropDownWidth="wrap_content"
         android:spinnerMode="dropdown"
         android:textSize="28sp"
         android:textAlignment="center"
-        android:gravity="center"
+        android:gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true" />/>
 
@@ -48,5 +46,28 @@
         android:text="Save"
         android:id="@+id/ref_save"
         android:layout_below="@+id/ref_spinner"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical|center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Selected Refrigerator"
+        android:id="@+id/textView11"
+        android:layout_below="@+id/textView8"
+        android:layout_alignEnd="@+id/ref_spinner"
+        android:layout_marginTop="75dp"
+        android:gravity="center_vertical|center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="None"
+        android:id="@+id/current_ref"
+        android:layout_below="@+id/textView11"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical|center_horizontal" />
 </RelativeLayout>
