--- a/app/src/main/res/layout/activity_main_settings_login.xml
+++ b/app/src/main/res/layout/activity_main_settings_login.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.codomotive.haminibarlogin.MainSettingsLogin"
-    android:background="@color/material_deep_teal_500">
+    android:background="#ffffffff">
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/textView7"
         android:layout_alignParentStart="true"
-        android:background="@android:color/holo_green_dark">
+        android:background="#ffe2e2e2">
 
         <TextView
             android:layout_width="wrap_content"
